<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="8dp"
    android:background="#FFFFFF"
    >

    // Logo
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:paddingTop="40dp"
        android:paddingBottom="16dp"
        app:srcCompat="@drawable/teamtravellogo" />

    // Compare
    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:paddingTop="16dp"
        android:text="@string/slogan1"
        android:fontFamily="sans-serif-black"
        android:textSize="30dp"
        android:textStyle="bold"
        android:textColor="#000000"
        />

    //Travel
    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView"
        android:text="@string/slogan2"
        android:textSize="30dp"
        android:fontFamily="sans-serif"
        android:textColor="#808080"
        />

    //email address
    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView2"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:paddingLeft="15dp"
        android:background="@drawable/edittextstyle"
        android:textSize="25dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        />

    //password
    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:paddingLeft="15dp"
        android:background="@drawable/edittextstyle"
        android:textSize="25dp"
        android:hint="@string/pass"
        android:inputType="textPassword"
        />

    //login
    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText2"
        android:layout_margin="20dp"
        android:text="@string/LogButtn"
        android:textSize="25dp"
        android:backgroundTint="#0476ff"
        android:background="@drawable/edittextstyle"
        android:textColor="#FFFFFF"
        />

    //don't have account
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:paddingTop="40dp"
        android:text="@string/register"
        android:textSize="20dp"
        android:textAlignment="center"
        android:textColor="#000000"
        />
</RelativeLayout>