<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    android:weightSum="7"
    tools:context=".MainActivity">

    //Logo
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="8dp"
        android:paddingTop="20dp"
        android:paddingBottom="0dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="8dp"
            android:src="@drawable/teamtravellogo" />

    </LinearLayout>

    //Compare
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="8dp"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/slogan1"
            android:textColor="#000000"
            android:textSize="30dp"
            android:textStyle="bold"
            android:fontFamily="sans-serif-black"
            />
    </LinearLayout>

    //travel
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="8dp"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/slogan2"
            android:textSize="30dp"
            android:textStyle="normal" />
    </LinearLayout>

    //email
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="8dp"
        android:layout_weight="1"
        android:paddingTop="10dp"
        >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_margin="20dp"
            android:background="@drawable/edittextstyle"
            android:paddingLeft="20dp"
            android:textSize="20dp"
            android:hint="@string/email" />
    </LinearLayout>

    //password
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="8dp"
        android:layout_weight="1"
        >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/edittextstyle"
            android:paddingLeft="20dp"
            android:textSize="20dp"
            android:hint="@string/pass" />
    </LinearLayout>

    //button login
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="8dp"
        android:layout_weight="1"
        >

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittextstyle"
            android:layout_margin="20dp"
            android:text="@string/LogButtn"
            android:backgroundTint="#0476ff"
            android:textSize="30dp"
            android:textColor="#FFFFFF"
            />
    </LinearLayout>

    //Dont have account

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="8dp"
        android:layout_weight="1"
        >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:autoLink="web"
                android:gravity="center"
                android:padding="20dp"
                android:textSize="16dp"
                android:text="@string/register"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#000000"
                />
    </LinearLayout>

</LinearLayout>